fixed nav bar issues that cropped up

--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ ul{
   background-color: purple;
 }
 
+@media (max-width:500px) {
+  li{
+    display: inline-block;
+    padding: 5px 10spx;
+  }
+}
 li{
   display: inline-block;
   padding: 15px 30px;
@@ -12,12 +18,10 @@ li{
 nav{
     overflow: hidden;
     max-width: 100%;
-
 }
 
 nav a{
     float: left;
-  display: block;
   color: #f394f3;
   background-color: purple;
   text-align: center;
